add button that calls an image from weather.api object

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 		<ul>
 
 		</ul>
+
+		<button id="button"><i class="fa fa-cloud"></i></i></button>
+		<img id="image" src="">
 	</div>
 
 	<script type="text/javascript" src="asset/js/todos.js"></script>
