add temp display beneath weather icon

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 		<button id="button"><i class="fa fa-cloud"></i></i></button>
 		<img id="image" src="">
+		<p id="temp"></p>
 	</div>
 
 	<script type="text/javascript" src="asset/js/todos.js"></script>
